--- a/bilancio_web/src/app/app.component.html
+++ b/bilancio_web/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
-  <div class="row">
+  <!--<div class="row">
     <div class="col">
       <app-uploader></app-uploader>
     </div>
@@ -10,6 +10,7 @@
     <div class="col">
         <app-lista-movimenti></app-lista-movimenti>
     </div>
-  </div>
+  </div>-->
+  <router-outlet></router-outlet>
 </div>
 
